tests/paczka1/fuzzy1/32139214.err
Error in line 6: 6RcWPJt A86 30,4
Error in line 7: S16 S16 72,5
Error in line 16: 6RcWPJt S16 85,0
Error in line 21: 6RcWPJt S912 -2,6
Error in line 12: S16 A545 97,9
Error in line 28: v5R2hr S912 8,1
Error in line 29: MDgIlOE6 A86 149,2
